program translations: update Portuguese

--- a/po/pt.po
+++ b/po/pt.po
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.4\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: src/extract/xtr_tta.cpp:107
 #, no-c-format
@@ -1395,6 +1395,7 @@ msgid " day"
 msgid_plural " days"
 msgstr[0] "dia"
 msgstr[1] "dias"
+msgstr[2] "dias"
 
 #: src/merge/output_control.cpp:276
 #: src/merge/output_control.cpp:286
@@ -1410,6 +1411,7 @@ msgid " second"
 msgid_plural " seconds"
 msgstr[0] " segundo"
 msgstr[1] " segundos"
+msgstr[2] " segundos"
 
 #: src/common/kax_info.cpp:303
 #, no-c-format
@@ -1547,6 +1549,7 @@ msgid "%1 bit per sample"
 msgid_plural "%1 bits per sample"
 msgstr[0] "bit por amostragem: %1"
 msgstr[1] "bits por amostragem: %1"
+msgstr[2] "bits por amostragem: %1"
 
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:123
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:127
@@ -1557,6 +1560,7 @@ msgid "%1 byte (%2)"
 msgid_plural "%1 bytes (%2)"
 msgstr[0] "%1 byte (%2)"
 msgstr[1] "%1 bytes (%2)"
+msgstr[2] "%1 bytes (%2)"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:132
 #: src/mkvtoolnix-gui/merge/track_model.cpp:706
@@ -1565,6 +1569,7 @@ msgid "%1 channel"
 msgid_plural "%1 channels"
 msgstr[0] "Canal de áudio: %1"
 msgstr[1] "Canais de áudio: %1"
+msgstr[2] "Canais de áudio: %1"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:139
 #: src/mkvtoolnix-gui/merge/track_model.cpp:342
@@ -1573,6 +1578,7 @@ msgid "%1 entry"
 msgid_plural "%1 entries"
 msgstr[0] "%1 entrada"
 msgstr[1] "%1 entradas"
+msgstr[2] "%1 entradas"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:113
 #, no-c-format
@@ -1580,6 +1586,7 @@ msgid "%1 error"
 msgid_plural "%1 errors"
 msgstr[0] "%1 Erro"
 msgstr[1] "%1 Erros"
+msgstr[2] "%1 Erros"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/track_model.cpp:716
@@ -1593,6 +1600,7 @@ msgid "%1 warning"
 msgid_plural "%1 warnings"
 msgstr[0] "%1 Aviso"
 msgstr[1] "%1 Avisos"
+msgstr[2] "%1 Avisos"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:349
 #, no-c-format
@@ -1848,6 +1856,7 @@ msgid "&Disable selected attachment"
 msgid_plural "&Disable selected attachments"
 msgstr[0] "Desactivar anexo seleccionado"
 msgstr[1] "Desactivar anexos seleccionados"
+msgstr[2] "Desactivar anexos seleccionados"
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:34
 #, no-c-format
@@ -1890,6 +1899,7 @@ msgid "&Enable selected attachment"
 msgid_plural "&Enable selected attachments"
 msgstr[0] "&Activar anexo seleccionado"
 msgstr[1] "&Activar anexos seleccionados"
+msgstr[2] "&Activar anexos seleccionados"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:522
 #, no-c-format
@@ -2207,6 +2217,7 @@ msgid "&Remove attachment"
 msgid_plural "&Remove attachments"
 msgstr[0] "&Remover anexo"
 msgstr[1] "&Remover anexos"
+msgstr[2] "&Remover anexos"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:212
 #, no-c-format
@@ -2219,6 +2230,7 @@ msgid "&Remove file"
 msgid_plural "&Remove files"
 msgstr[0] "&Remover ficheiro"
 msgstr[1] "&Remover ficheiros"
+msgstr[2] "&Remover ficheiros"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:217
 #, no-c-format
@@ -2226,6 +2238,7 @@ msgid "&Remove job"
 msgid_plural "&Remove jobs"
 msgstr[0] "&Remover tarefa"
 msgstr[1] "&Remover tarefas"
+msgstr[2] "&Remover tarefas"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2212
 #, no-c-format
@@ -2330,6 +2343,7 @@ msgid "&Start job automatically"
 msgid_plural "&Start jobs automatically"
 msgstr[0] "Iniciar tarefa automaticamente"
 msgstr[1] "Iniciar tarefas automaticamente"
+msgstr[2] "Iniciar tarefas automaticamente"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:183
 #, no-c-format
@@ -3089,6 +3103,7 @@ msgid "A problem has been detected with this installation of MKVToolNix:"
 msgid_plural "Several problems have been detected with this installation of MKVToolNix:"
 msgstr[0] "Um problema foi detectado com esta instalação do MKVToolNix:"
 msgstr[1] "Graves problemas foram detectados com esta instalação do MKVToolNix:"
+msgstr[2] "Graves problemas foram detectados com esta instalação do MKVToolNix:"
 
 #: src/common/property_element.cpp:123
 #, no-c-format
@@ -4681,6 +4696,7 @@ msgid "Chapters: {0} entry"
 msgid_plural "Chapters: {0} entries"
 msgstr[0] "Capítulos: {0} entrada"
 msgstr[1] "Capítulos: {0} entradas"
+msgstr[2] "Capítulos: {0} entradas"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:85
 #, no-c-format
@@ -7032,6 +7048,7 @@ msgid "Global tags: {0} entry"
 msgid_plural "Global tags: {0} entries"
 msgstr[0] "Etiquetas globais: {0} entrada"
 msgstr[1] "Etiquetas globais: {0} entradas"
+msgstr[2] "Etiquetas globais: {0} entradas"
 
 #: src/common/property_element.cpp:188
 #, no-c-format
@@ -9535,6 +9552,7 @@ msgid "Open corresponding file in &MediaInfo"
 msgid_plural "Open corresponding files in &MediaInfo"
 msgstr[0] "Abrir o ficheiro correspondente no MediaInfo"
 msgstr[1] "Abrir os ficheiros correspondentes no MediaInfo"
+msgstr[2] "Abrir os ficheiros correspondentes no MediaInfo"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1646
 #, no-c-format
@@ -9542,6 +9560,7 @@ msgid "Open file in &MediaInfo"
 msgid_plural "Open files in &MediaInfo"
 msgstr[0] "Abrir ficheiro no MediaInfo"
 msgstr[1] "Abrir ficheiros no MediaInfo"
+msgstr[2] "Abrir ficheiros no MediaInfo"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:195
 #, no-c-format
@@ -9564,6 +9583,7 @@ msgid "Opening %1 file in the chapter editor…"
 msgid_plural "Opening %1 files in the chapter editor…"
 msgstr[0] "A abrir %1 ficheiro no editor de capítulos..."
 msgstr[1] "A abrir %1 ficheiros no editor de capítulos..."
+msgstr[2] "A abrir %1 ficheiros no editor de capítulos..."
 
 #: src/mkvtoolnix-gui/header_editor/tool.cpp:206
 #, no-c-format
@@ -9571,6 +9591,7 @@ msgid "Opening %1 file in the header editor…"
 msgid_plural "Opening %1 files in the header editor…"
 msgstr[0] "A abrir %1 ficheiro no editor de cabeçalhos..."
 msgstr[1] "A abrir %1 ficheiros no editor de cabeçalhos..."
+msgstr[2] "A abrir %1 ficheiros no editor de cabeçalhos..."
 
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:114
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:115
@@ -9838,6 +9859,7 @@ msgid "Please re-install MKVToolNix or fix the problem manually."
 msgid_plural "Please re-install MKVToolNix or fix the problems manually."
 msgstr[0] "Reinstale o MKVToolNix ou corrija o problema manualmente."
 msgstr[1] "Reinstale o MKVToolNix ou corrija os problemas manualmente."
+msgstr[2] "Reinstale o MKVToolNix ou corrija os problemas manualmente."
 
 #: src/merge/mkvmerge.cpp:412
 #, no-c-format
@@ -9990,6 +10012,7 @@ msgid "Problem with MKVToolNix installation"
 msgid_plural "Problems with MKVToolNix installation"
 msgstr[0] "Problema com a instalação do MKVToolNix"
 msgstr[1] "Problemas com a instalação do MKVToolNix"
+msgstr[2] "Problemas com a instalação do MKVToolNix"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2114
 #, no-c-format
@@ -11494,6 +11517,7 @@ msgid "Start job &immediately"
 msgid_plural "Start jobs &immediately"
 msgstr[0] "Iniciar tarefa imediatamente"
 msgstr[1] "Iniciar tarefas imediatamente"
+msgstr[2] "Iniciar tarefas imediatamente"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:215
 #, no-c-format
@@ -11501,6 +11525,7 @@ msgid "Start job &manually"
 msgid_plural "Start jobs &manually"
 msgstr[0] "Iniciar tarefa manualmente"
 msgstr[1] "Iniciar tarefas manualmente"
+msgstr[2] "Iniciar tarefas manualmente"
 
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:291
 #, no-c-format
@@ -16258,6 +16283,7 @@ msgid "{0} byte"
 msgid_plural "{0} bytes"
 msgstr[0] "{0} byte"
 msgstr[1] "{0} bytes"
+msgstr[2] "{0} bytes"
 
 #: src/common/kax_info.cpp:943
 #, no-c-format
@@ -16280,6 +16306,7 @@ msgid "{0} minute"
 msgid_plural "{0} minutes"
 msgstr[0] "{0} minuto"
 msgstr[1] "{0} minutos"
+msgstr[2] "{0} minutos"
 
 #: src/common/strings/formatting.cpp:249
 #, no-c-format
@@ -16287,6 +16314,7 @@ msgid "{0} second"
 msgid_plural "{0} seconds"
 msgstr[0] "{0} segundo"
 msgstr[1] "{0} segundos"
+msgstr[2] "{0} segundos"
 
 #: src/common/strings/formatting.cpp:262
 #, no-c-format
