program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.3\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: src/extract/xtr_tta.cpp:107
 #, no-c-format
@@ -1407,6 +1407,7 @@ msgid " day"
 msgid_plural " days"
 msgstr[0] " dia"
 msgstr[1] " dias"
+msgstr[2] " dias"
 
 #: src/merge/output_control.cpp:276
 #: src/merge/output_control.cpp:286
@@ -1422,6 +1423,7 @@ msgid " second"
 msgid_plural " seconds"
 msgstr[0] " segundo"
 msgstr[1] " segundos"
+msgstr[2] " segundos"
 
 #: src/common/kax_info.cpp:303
 #, no-c-format
@@ -1559,6 +1561,7 @@ msgid "%1 bit per sample"
 msgid_plural "%1 bits per sample"
 msgstr[0] "%1 bit por amostra"
 msgstr[1] "%1 bits por amostra"
+msgstr[2] "%1 bits por amostra"
 
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:123
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:127
@@ -1569,6 +1572,7 @@ msgid "%1 byte (%2)"
 msgid_plural "%1 bytes (%2)"
 msgstr[0] "%1 byte (%2)"
 msgstr[1] "%1 bytes (%2)"
+msgstr[2] "%1 bytes (%2)"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:132
 #: src/mkvtoolnix-gui/merge/track_model.cpp:706
@@ -1577,6 +1581,7 @@ msgid "%1 channel"
 msgid_plural "%1 channels"
 msgstr[0] "%1 canal"
 msgstr[1] "%1 canais"
+msgstr[2] "%1 canais"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:139
 #: src/mkvtoolnix-gui/merge/track_model.cpp:342
@@ -1585,6 +1590,7 @@ msgid "%1 entry"
 msgid_plural "%1 entries"
 msgstr[0] "%1 entrada"
 msgstr[1] "%1 entradas"
+msgstr[2] "%1 entradas"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:113
 #, no-c-format
@@ -1592,6 +1598,7 @@ msgid "%1 error"
 msgid_plural "%1 errors"
 msgstr[0] "%1 erro"
 msgstr[1] "%1 erros"
+msgstr[2] "%1 erros"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/track_model.cpp:716
@@ -1605,6 +1612,7 @@ msgid "%1 warning"
 msgid_plural "%1 warnings"
 msgstr[0] "%1 aviso"
 msgstr[1] "%1 avisos"
+msgstr[2] "%1 avisos"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:349
 #, no-c-format
@@ -1860,6 +1868,7 @@ msgid "&Disable selected attachment"
 msgid_plural "&Disable selected attachments"
 msgstr[0] "&Desativar anexo selecionado"
 msgstr[1] "&Desativar anexos selecionados"
+msgstr[2] "&Desativar anexos selecionados"
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:34
 #, no-c-format
@@ -1902,6 +1911,7 @@ msgid "&Enable selected attachment"
 msgid_plural "&Enable selected attachments"
 msgstr[0] "&Ativar anexo selecionado"
 msgstr[1] "&Ativar anexos selecionados"
+msgstr[2] "&Ativar anexos selecionados"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:522
 #, no-c-format
@@ -2219,6 +2229,7 @@ msgid "&Remove attachment"
 msgid_plural "&Remove attachments"
 msgstr[0] "&Remover anexo"
 msgstr[1] "&Remover anexos"
+msgstr[2] "&Remover anexos"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:212
 #, no-c-format
@@ -2231,6 +2242,7 @@ msgid "&Remove file"
 msgid_plural "&Remove files"
 msgstr[0] "&Remover arquivo"
 msgstr[1] "&Remover arquivos"
+msgstr[2] "&Remover arquivos"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:217
 #, no-c-format
@@ -2238,6 +2250,7 @@ msgid "&Remove job"
 msgid_plural "&Remove jobs"
 msgstr[0] "&Remover tarefa"
 msgstr[1] "&Remover tarefas"
+msgstr[2] "&Remover tarefas"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2212
 #, no-c-format
@@ -2342,6 +2355,7 @@ msgid "&Start job automatically"
 msgid_plural "&Start jobs automatically"
 msgstr[0] "Iniciar &tarefa automaticamente."
 msgstr[1] "Iniciar &tarefas automaticamente."
+msgstr[2] "Iniciar &tarefas automaticamente."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:183
 #, no-c-format
@@ -3101,6 +3115,7 @@ msgid "A problem has been detected with this installation of MKVToolNix:"
 msgid_plural "Several problems have been detected with this installation of MKVToolNix:"
 msgstr[0] "Um problema foi detectado com esta instalação do MKVToolNix:"
 msgstr[1] "Vários problemas foram detectados com esta instalação do MKVToolNix:"
+msgstr[2] "Vários problemas foram detectados com esta instalação do MKVToolNix:"
 
 #: src/common/property_element.cpp:123
 #, no-c-format
@@ -4693,6 +4708,7 @@ msgid "Chapters: {0} entry"
 msgid_plural "Chapters: {0} entries"
 msgstr[0] "Capítulos: {0} entrada"
 msgstr[1] "Capítulos: {0} entradas"
+msgstr[2] "Capítulos: {0} entradas"
 
 #: src/mkvtoolnix-gui/merge/track_model.cpp:85
 #, no-c-format
@@ -7044,6 +7060,7 @@ msgid "Global tags: {0} entry"
 msgid_plural "Global tags: {0} entries"
 msgstr[0] "Etiquetas globais: {0} entrada"
 msgstr[1] "Etiquetas globais: {0} entradas"
+msgstr[2] "Etiquetas globais: {0} entradas"
 
 #: src/common/property_element.cpp:188
 #, no-c-format
@@ -8293,6 +8310,7 @@ msgid "Length: %1 byte"
 msgid_plural "Length: %1 bytes"
 msgstr[0] "Comprimento: %1 byte"
 msgstr[1] "Comprimento: %1 bytes"
+msgstr[2] "Comprimento: %1 bytes"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -9509,6 +9527,7 @@ msgid "Only {0} chapter found in source files & chapter files."
 msgid_plural "Only {0} chapters found in source files & chapter files."
 msgstr[0] "Apenas {0} capítulo encontrado nos arquivos de origem e arquivos de capítulo."
 msgstr[1] "Apenas {0} capítulos encontrados nos arquivos de origem e arquivos de capítulo."
+msgstr[2] "Apenas {0} capítulos encontrados nos arquivos de origem e arquivos de capítulo."
 
 #: src/common/file_types.cpp:97
 #, no-c-format
@@ -9547,6 +9566,7 @@ msgid "Open corresponding file in &MediaInfo"
 msgid_plural "Open corresponding files in &MediaInfo"
 msgstr[0] "Abrir arquivo correspondente no &MediaInfo"
 msgstr[1] "Abrir arquivos correspondentes no &MediaInfo"
+msgstr[2] "Abrir arquivos correspondentes no &MediaInfo"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1646
 #, no-c-format
@@ -9554,6 +9574,7 @@ msgid "Open file in &MediaInfo"
 msgid_plural "Open files in &MediaInfo"
 msgstr[0] "Abrir arquivo no &MediaInfo"
 msgstr[1] "Abrir arquivos no &MediaInfo"
+msgstr[2] "Abrir arquivos no &MediaInfo"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:195
 #, no-c-format
@@ -9576,6 +9597,7 @@ msgid "Opening %1 file in the chapter editor…"
 msgid_plural "Opening %1 files in the chapter editor…"
 msgstr[0] "Abrindo %1 arquivo no editor de capítulos…"
 msgstr[1] "Abrindo %1 arquivos no editor de capítulos…"
+msgstr[2] "Abrindo %1 arquivos no editor de capítulos…"
 
 #: src/mkvtoolnix-gui/header_editor/tool.cpp:206
 #, no-c-format
@@ -9583,6 +9605,7 @@ msgid "Opening %1 file in the header editor…"
 msgid_plural "Opening %1 files in the header editor…"
 msgstr[0] "Abrindo %1 arquivo no editor de cabeçalhos…"
 msgstr[1] "Abrindo %1 arquivos no editor de cabeçalhos…"
+msgstr[2] "Abrindo %1 arquivos no editor de cabeçalhos…"
 
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:114
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:115
@@ -9823,6 +9846,7 @@ msgid "Playlists shorter than %1 second will be ignored."
 msgid_plural "Playlists shorter than %1 seconds will be ignored."
 msgstr[0] "Listas de reprodução menores que %1 segundo serão ignoradas."
 msgstr[1] "Listas de reprodução menores que %1 segundos serão ignoradas."
+msgstr[2] "Listas de reprodução menores que %1 segundos serão ignoradas."
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:541
 #, no-c-format
@@ -9850,6 +9874,7 @@ msgid "Please re-install MKVToolNix or fix the problem manually."
 msgid_plural "Please re-install MKVToolNix or fix the problems manually."
 msgstr[0] "Reinstale o MKVToolNix ou corrija o problema manualmente."
 msgstr[1] "Reinstale o MKVToolNix ou corrija os problemas manualmente."
+msgstr[2] "Reinstale o MKVToolNix ou corrija os problemas manualmente."
 
 #: src/merge/mkvmerge.cpp:412
 #, no-c-format
@@ -10002,6 +10027,7 @@ msgid "Problem with MKVToolNix installation"
 msgid_plural "Problems with MKVToolNix installation"
 msgstr[0] "Problema com a instalação do MKVToolNix"
 msgstr[1] "Problemas com a instalação do MKVToolNix"
+msgstr[2] "Problemas com a instalação do MKVToolNix"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2114
 #, no-c-format
@@ -10803,6 +10829,7 @@ msgid "Scanning {0} files in {1} playlist.\n"
 msgid_plural "Scanning {0} files in {1} playlists.\n"
 msgstr[0] "Escaneando {0} arquivos em {1} lista de reprodução.\n"
 msgstr[1] "Escaneando {0} arquivos em {1} listas de reprodução.\n"
+msgstr[2] "Escaneando {0} arquivos em {1} listas de reprodução.\n"
 
 #: src/common/kax_element_names.cpp:167
 #, no-c-format
@@ -10921,6 +10948,7 @@ msgid "Select all &items from selected file"
 msgid_plural "Select all &items from selected files"
 msgstr[0] "Selecionar todos &itens do arquivo selecionado"
 msgstr[1] "Selecionar todos &itens dos arquivos selecionados"
+msgstr[2] "Selecionar todos &itens dos arquivos selecionados"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1691
 #, no-c-format
@@ -11506,6 +11534,7 @@ msgid "Start job &immediately"
 msgid_plural "Start jobs &immediately"
 msgstr[0] "Iniciar tarefa &imediatamente"
 msgstr[1] "Iniciar tarefas &imediatamente"
+msgstr[2] "Iniciar tarefas &imediatamente"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:215
 #, no-c-format
@@ -11513,6 +11542,7 @@ msgid "Start job &manually"
 msgid_plural "Start jobs &manually"
 msgstr[0] "Iniciar tarefa &manualmente"
 msgstr[1] "Iniciar tarefas &manualmente"
+msgstr[2] "Iniciar tarefas &manualmente"
 
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:291
 #, no-c-format
@@ -11699,6 +11729,7 @@ msgid "Tags for track ID {0}: {1} entry"
 msgid_plural "Tags for track ID {0}: {1} entries"
 msgstr[0] "Etiquetas para o ID da faixa {0}: {1} entrada"
 msgstr[1] "Etiquetas para o ID da faixa {0}: {1} entradas"
+msgstr[2] "Etiquetas para o ID da faixa {0}: {1} entradas"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2191
 #, no-c-format
@@ -12244,6 +12275,7 @@ msgid "The directory it is located in contains %1 other file with the same exten
 msgid_plural "The directory it is located in contains %1 other files with the same extension."
 msgstr[0] "O diretório em que está localizado contém %1 outro arquivo com a mesma extensão."
 msgstr[1] "O diretório em que está localizado contém %1 outros arquivos com a mesma extensão."
+msgstr[2] "O diretório em que está localizado contém %1 outros arquivos com a mesma extensão."
 
 #: src/merge/connection_checks.h:48
 #, no-c-format
@@ -13615,6 +13647,7 @@ msgid "This audio track contains {0} byte of invalid data which was skipped befo
 msgid_plural "This audio track contains {0} bytes of invalid data which were skipped before timestamp {1}."
 msgstr[0] "Esta faixa de áudio contém {0} byte de dados inválidos que foram ignorados antes do código de tempo {1}."
 msgstr[1] "Esta faixa de áudio contém {0} bytes de dados inválidos que foram ignorados antes do código de tempo {1}."
+msgstr[2] "Esta faixa de áudio contém {0} bytes de dados inválidos que foram ignorados antes do código de tempo {1}."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:50
 #, no-c-format
@@ -16270,6 +16303,7 @@ msgid "{0} byte"
 msgid_plural "{0} bytes"
 msgstr[0] "{0} byte"
 msgstr[1] "{0} bytes"
+msgstr[2] "{0} bytes"
 
 #: src/common/kax_info.cpp:943
 #, no-c-format
@@ -16292,6 +16326,7 @@ msgid "{0} minute"
 msgid_plural "{0} minutes"
 msgstr[0] "{0} minuto"
 msgstr[1] "{0} minutos"
+msgstr[2] "{0} minutos"
 
 #: src/common/strings/formatting.cpp:249
 #, no-c-format
@@ -16299,6 +16334,7 @@ msgid "{0} second"
 msgid_plural "{0} seconds"
 msgstr[0] "{0} segundo"
 msgstr[1] "{0} segundos"
+msgstr[2] "{0} segundos"
 
 #: src/common/strings/formatting.cpp:262
 #, no-c-format
