program translations: update Chinese Simplified (Singapore)

--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -640,8 +640,8 @@ msgid ""
 msgstr ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                           将 IETF BCP 47 语言元素的值规范化为\n"
-"                           对应的最简式或扩展语言子标签形式\n"
-"                           或不作任何改动 (默认: 最简式)。\n"
+"                           对应的 ｢最简式｣ 或 ｢扩展语言子标签｣\n"
+"                           形式或保持原样 (默认: 最简式)。\n"
 
 #: src/merge/mkvmerge.cpp:260
 #, no-c-format
@@ -9092,7 +9092,7 @@ msgstr "常规优先级"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "将所有发生变化的元素的 IETF BCP 47 语言标签规范化为其最简式 (｢canonical｣ 模式) 或其扩展语言子标签形式 (｢extlang｣ 模式) 或不作改动 (｢off｣ 模式)。"
+msgstr "将所有发生变化的元素的 IETF BCP 47 语言标签规范化为其 ｢最简式｣ (｢canonical｣ 模式) 或其 ｢扩展语言子标签形式｣ (｢extlang｣ 模式) 或保持原样 (｢off｣ 模式)。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:315
 #, no-c-format
@@ -10387,7 +10387,7 @@ msgstr "重新编号命名子章节"
 #: src/propedit/propedit_cli_parser.cpp:262
 #, no-c-format
 msgid "Replace an attachment with the file 'filename'"
-msgstr "用文件 'filename' 替换一个现有附件"
+msgstr "用文件 ｢filename｣ 替换现有的某个附件"
 
 #: src/mkvtoolnix-gui/header_editor/attached_file_page.cpp:209
 #, no-c-format
@@ -12191,7 +12191,7 @@ msgstr "错误讯息为:"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:451
 #, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "扩展语言子标签「%1」已被弃用。"
+msgstr "扩展语言子标签 ｢%1｣ 已被弃用。"
 
 #: src/common/bcp47.cpp:448
 #, no-c-format
@@ -12971,7 +12971,7 @@ msgstr "地区「%1」已被弃用。"
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
 msgid "The rest is copied as is."
-msgstr "其他部分原样复制。"
+msgstr "其余内容原样复制。"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
 #, no-c-format
