man page translations: update Chinese Traditional (Taiwan)

--- a/doc/man/po4a/po/zh_TW.po
+++ b/doc/man/po4a/po/zh_TW.po
@@ -253,7 +253,7 @@ msgstr "<command>mkvextract</command> <arg choice=\"req\">輸入檔名</arg> <ar
 #: doc/stylesheets/docbook-to-html.xsl:129
 #, no-wrap
 msgid "Description"
-msgstr "描述"
+msgstr "摘要說明"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvextract.xml:66
@@ -3363,7 +3363,7 @@ msgstr "<option>--projection-pose-pitch</option> <parameter>TID:漂浮點</param
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2024
 msgid "Specifies a pitch rotation to the projection."
-msgstr "指定音高旋轉至視訊外觀比例。"
+msgstr "指定繞 X 軸旋轉至視訊外觀比。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2030
@@ -5412,7 +5412,7 @@ msgstr "刪除第二個附加檔，無論可能是什麼:"
 #: doc/man/mkvpropedit.xml:779
 #, no-wrap
 msgid "$ mkvpropedit movie.mkv --delete-attachment 2"
-msgstr "$ mkvpropedit movie.mkv --delete-attachment 2"
+msgstr "$ mkvpropedit 影片.mkv --delete-attachment 2"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:782
@@ -5423,7 +5423,7 @@ msgstr "依 MIME 類型刪除所有附加的字型:"
 #: doc/man/mkvpropedit.xml:785
 #, no-wrap
 msgid "$ mkvpropedit movie.mkv --delete-attachment mime-type:application/x-truetype-font"
-msgstr "$ mkvpropedit movie.mkv --delete-attachment mime-type:application/x-truetype-font"
+msgstr "$ mkvpropedit 影片.mkv --delete-attachment mime-type:application/x-truetype-font"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:792
@@ -5523,7 +5523,7 @@ msgstr "<option>--info</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:93
 msgid "All following file names will be opened in the info tool."
-msgstr "所有檔命稱將在資訊工具中開啟。"
+msgstr "其後所有檔名將在資訊工具中開啟。"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:94
