program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -4171,9 +4171,9 @@ msgid "Bits per channel"
 msgstr "Bits por canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Video: bits por cada canal de color"
+msgstr "Bits por canal de color:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4498,9 +4498,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Provoca que mkvmerge escriba un segundo conjunto de idénticas cabeceras de pista próximas al final de archivo (después de todos los clústers)"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Vídeo: submuestreo Cb vertical"
+msgstr "Submuestreo Cb:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:334
 #, no-c-format
@@ -4801,19 +4801,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Habilitar esta opción provoca que la GUI configure por defecto la compresión a »ninguna« para todos los tipos de pista cuando se añaden archivos."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Video: posicionamiento de crominancia"
+msgstr "Ubicación del croma:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Video: submuestreo croma vertical"
+msgstr "Submuestreo del croma:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Coordenadas de cromaticidad:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2171
 #, no-c-format
@@ -4961,9 +4961,9 @@ msgid "Colour matrix coefficients"
 msgstr "Coeficientes de matriz del códec"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Coeficientes de matriz del códec"
+msgstr "Coeficientes de la matriz de color:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4971,9 +4971,9 @@ msgid "Colour primaries"
 msgstr "Primarias del códec"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Primarias del códec"
+msgstr "Colores primarios:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4981,9 +4981,9 @@ msgid "Colour range"
 msgstr "Rango de color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Rango de color"
+msgstr "Rango de color:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8680,9 +8680,9 @@ msgid "Maximum content light"
 msgstr "Contenido máximo de iluminación"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Contenido máximo de iluminación"
+msgstr "Máximo contenido de luz:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8690,9 +8690,9 @@ msgid "Maximum frame light"
 msgstr "Iluminación máxima del fotograma"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Iluminación máxima del fotograma"
+msgstr "Máxima luz del fotograma:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8710,9 +8710,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Máxima luminancia en candelas por metro cuadrado (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Luminancia máxima"
+msgstr "Luminancia máxima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8763,9 +8763,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Mínima luminancia en candelas por metro cuadrado (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Luminancia mínima"
+msgstr "Luminancia mínima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9414,9 +9414,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "Nú&meros de registros a crear:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Número de registros a renumerar:"
+msgstr "Número de entradas &recientes a recordar:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
@@ -9831,9 +9831,9 @@ msgid "Pending manual start"
 msgstr "Inicio manual pendiente"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Rotación transversal de la proyección"
+msgstr "Rotación de cabeceo:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10148,9 +10148,9 @@ msgid "Projection type"
 msgstr "Tipo de proyección"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Tipo de proyección"
+msgstr "Tipo de proyección:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10173,9 +10173,9 @@ msgid "Projection's yaw rotation"
 msgstr "Rotación de guiñada de la proyección"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Video: datos de proyección específica"
+msgstr "Datos específicos de la proyección:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10689,9 +10689,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Click en botón derecho para añadir, agregar y eliminar archivos"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Duración:"
+msgstr "Rotación de alabeo:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14306,9 +14306,9 @@ msgid "Tracks:"
 msgstr "Pistas:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Video: características de transferencia"
+msgstr "Características de transferencia:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -15196,9 +15196,9 @@ msgid "White colour coordinate y"
 msgstr "Color blanco, coordenada Y"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Color blanco, coordenada X"
+msgstr "Coordenadas de color blanco:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15331,9 +15331,9 @@ msgid "Xiph lacing"
 msgstr "Ataduras Xiph"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Duración:"
+msgstr "Rotación de guiñada:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
