program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -9345,9 +9345,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "Nu&mero degli elementi da creare:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Numero elementi da rinumerare:"
+msgstr "Numero voci &usate di recente da ricordare:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
