--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-07-07 18:34+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2022\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019-2022\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -9099,9 +9099,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "Ко&личество создаваемых записей:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Количество записей для перенумерации:"
+msgstr "Количество запоминаемых недавно использованных записей:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
