program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -9306,9 +9306,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "Oluşturmak için giriş sa&yısı:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "Yeniden &numaralandırmak için giriş sayısı:"
+msgstr "Hatırlanacak &en son kullanılan girişlerin sayısı:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
